Debugged 2 different spacing issues with the save button in the CSS file.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: auto;
   border-top: 1px solid white;;
 }
 
@@ -67,5 +67,9 @@ textarea {
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.fa-save {
+  vertical-align: 12px;
 }
